# microservices-via-kafka-app

./: .gitignore  .pre-commit-config.yaml  README.md  base.py  dashboard.html  dashboard_service.py  docker-compose.yaml  dto.py  pyproject.toml  recommendation_service.py  settings.py  stock-quotes-tesla.csv  stock_quotes_service.py
dashboard_service/: Dockerfile  dashboard_service.py  docker-compose.yaml  pyproject.toml
recommendation_service/: Dockerfile  base.py  docker-compose.yaml  pyproject.toml  recommendation_service.py  settings.py
stock_quotes_service/: Dockerfile  docker-compose.yaml  pyproject.toml  settings.py  stock_quotes_service.py
