[tool.poetry]
name = "microservices-and-kafka"
version = "0.1.0"
description = ""
authors = ["Rafał Misiarek <misiarek@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
confluent-kafka = "^1.7.0"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
isort = "^5.9.3"
pylint = "^2.9.6"
pre-commit = "^2.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
