[tool.poetry]
name = "stock_quotes_service"
version = "0.1.0"
description = ""
authors = ["Rafał Misiarek <misiarek@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
confluent-kafka = "^1.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
